Added lost images and adding a table

--- a/index.html
+++ b/index.html
@@ -158,34 +158,34 @@
                     <p>Chaque année, la Convention Web de Montréal réunit une sélection de dévelopeurs web de partout à
                         travers l’Amérique du Nord qui tentent toujours de pousser les limites du web.
                     </p>
-                    <p>Les divers conventions proposés permetront aux visiteurs d’en apprendre d’avantage sur la
+                    <p>Les diverses conventions proposées permetront aux visiteurs d’en apprendre d’avantage sur la
                         programation web et ses nombreux secrets</p>
                 </div>
                 <div class="invites-sample">
                     <div class="invites-sample-content img-invite-hover">
-                        <div><a href=""><img src="img/invite/invite_jeremy.jpg" alt="Invité"
+                        <div><a href=""><img src="img/invite/invite_jeremy.jpg" alt="Invité Jeremy"
                                              class="img-invite-hover"></a>
                             <div class="invites-sample-content-titles">
                                 <div>Jérémy Lavoie</div>
                                 <div>Designer Graphique</div>
                             </div>
                         </div>
-                        <div><a href=""><img src="img/invite/invite_jeremy.jpg" alt="Invité"
+                        <div><a href=""><img src="img/invite/invite_robert.jpg" alt="Invité Robert"
                                              class="img-invite-hover"></a>
                             <div class="invites-sample-content-titles">
-                                <div>Jérémy Lavoie</div>
-                                <div>Designer Graphique</div>
+                                <div>Robert Mercado</div>
+                                <div>Programmeur Back-End</div>
                             </div>
                         </div>
-                        <div><a href=""><img src="img/invite/invite_jeremy.jpg" alt="Invité"
+                        <div><a href=""><img src="img/invite/invite_bobby.jpg" alt="Invité Bobby"
                                              class="img-invite-hover"></a>
                             <div class="invites-sample-content-titles">
-                                <div>Jérémy Lavoie</div>
-                                <div>Designer Graphique</div>
+                                <div>Bobby Franks</div>
+                                <div>Programmeur Full-Stack</div>
                             </div>
                         </div>
                     </div>
-                    <a href="" class="btn btn-green-border">Voir tout</a>
+                    <a href="programmation.html" class="btn btn-green-border">Voir tout</a>
                 </div>
             </div>
         </div>
