--- a/invite.html
+++ b/invite.html
@@ -18,27 +18,55 @@
 </head>
 <body>
 
-<header>
-    <div class="wrapper">
-        <nav>
-            <div>
-                <a href="index.html"><img src="img/logo/logo.svg" alt="Logo Convention Web de Montréal"
-                                          class="logo"></a>
-                <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="programmation.html">Programmation</a></li>
-                    <li><a href="#">Conférenciers</a></li>
-                    <li><a href="#">Informations</a></li>
-                </ul>
+    <nav class="nav-mobile">
+        <div class="wrapper">
+            <nav>
+                <div>
+                    <a href="index.html"><img src="img/logo/logo_white.svg" alt="Logo Convention Web de Montréal"
+                                              class="logo"></a>
+                </div>
+                <div>
+                    <a href="#" class="btn btn-white-border">Billeterie</a>
+                    <label for="show-menu-2" class="show-menu"><i class="fa fa-bars" aria-hidden="true"></i></label>
+                    <input type="checkbox" id="show-menu-2" class="toggle-menu">
+                </div>
+            </nav>
+            <div class="menu-mobile">
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">Accueil</a></li>
+                        <li><a href="programmation.html">Programmation</a></li>
+                        <li><a href="#">Conférenciers</a></li>
+                        <li><a href="#">Informations</a></li>
+                    </ul>
+                </div>
             </div>
-            <div>
-                <a href="#" class="btn btn-green">Billeterie</a>
-                <label for="show-menu" class="show-menu"><i class="fa fa-bars" aria-hidden="true"></i></label>
-                <input type="checkbox" id="show-menu" class="toggle-menu">
-            </div>
-        </nav>
-    </div>
-</header>
+        </div>
+    </nav>
+    
+    <header>
+        <div class="wrapper">
+            <nav>
+                <div>
+                    <a href="index.html"><img src="img/logo/logo.svg" alt="Logo Convention Web de Montréal"
+                                              class="logo"></a>
+                    <div class="menu">
+                        <ul>
+                            <li><a href="#">Accueil</a></li>
+                            <li><a href="programmation.html">Programmation</a></li>
+                            <li><a href="#">Conférenciers</a></li>
+                            <li><a href="#">Informations</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <a href="#" class="btn btn-green">Billeterie</a>
+                    <label for="show-menu" class="show-menu"><i class="fa fa-bars" aria-hidden="true"></i></label>
+                    <input type="checkbox" id="show-menu" class="toggle-menu">
+                </div>
+            </nav>
+        </div>
+    </header>
 
 <section class="page">
     <article class="fiche">
@@ -91,27 +119,29 @@
             <h3>Nos invités</h3>
             <div class="fiche-invites-liste-content">
                 <div>
-                    <a href=""><img src="img/invite/invite_jeremy.jpg" alt="Invité" class="img-invite-hover"></a>
+                    <a href=""><img src="img/invite/invite_jeremy.jpg" alt="Invité Jeremy" class="img-invite-hover"></a>
                 </div>
                 <div>
-                    <a href=""><img src="img/invite/invite_jeremy.jpg" alt="Invité" class="img-invite-hover"></a>
+                    <a href=""><img src="img/invite/invite_norma.jpg" alt="Invité Norma" class="img-invite-hover"></a>
                 </div>
                 <div>
-                    <a href=""><img src="img/invite/invite_jeremy.jpg" alt="Invité" class="img-invite-hover"></a>
+                    <a href=""><img src="img/invite/invite_robert.jpg" alt="Invité Robert" class="img-invite-hover"></a>
                 </div>
                 <div>
-                    <a href=""><img src="img/invite/invite_jeremy.jpg" alt="Invité" class="img-invite-hover"></a>
+                    <a href=""><img src="img/invite/invite_bobby.jpg" alt="Invité Bobby" class="img-invite-hover"></a>
                 </div>
                 <div>
-                    <a href=""><img src="img/invite/invite_jeremy.jpg" alt="Invité" class="img-invite-hover"></a>
+                    <a href=""><img src="img/invite/invite_gordon.jpg" alt="Invité Gordon" class="img-invite-hover"></a>
                 </div>
                 <div>
-                    <a href=""><img src="img/invite/invite_jeremy.jpg" alt="Invité" class="img-invite-hover"></a>
-                </div><div>
-                <a href=""><img src="img/invite/invite_jeremy.jpg" alt="Invité" class="img-invite-hover"></a>
-            </div><div>
-                <a href=""><img src="img/invite/invite_jeremy.jpg" alt="Invité" class="img-invite-hover"></a>
-            </div>
+                    <a href=""><img src="img/invite/invite_gary.jpg" alt="Invité Gary" class="img-invite-hover"></a>
+                </div>
+                <div>
+                <a href=""><img src="img/invite/invite_allison.jpg" alt="Invité Allison" class="img-invite-hover"></a>
+                </div>
+                <div>
+                <a href=""><img src="img/invite/invite_liang.jpg" alt="Invité Liang" class="img-invite-hover"></a>
+                </div>
 
 
 
