--- a/programmation.html
+++ b/programmation.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Programmation</title>
+    <title>Convention Web de Montréal</title>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
