--- a/programmation.html
+++ b/programmation.html
@@ -27,6 +27,7 @@
                                               class="logo"></a>
                 </div>
                 <div>
+                    <a href="#" class="btn btn-white-border">Billeterie</a>
                     <label for="show-menu-2" class="show-menu"><i class="fa fa-bars" aria-hidden="true"></i></label>
                     <input type="checkbox" id="show-menu-2" class="toggle-menu">
                 </div>
@@ -60,7 +61,7 @@
                     </div>
                 </div>
                 <div>
-                    <a href="#" class="btn btn-green">Billeterie</a>
+                    <a href="#" class="btn btn-green btn-billet">Billeterie</a>
                     <label for="show-menu" class="show-menu"><i class="fa fa-bars" aria-hidden="true"></i></label>
                     <input type="checkbox" id="show-menu" class="toggle-menu">
                 </div>
