--- a/index.html
+++ b/index.html
@@ -163,21 +163,21 @@
                 </div>
                 <div class="invites-sample">
                     <div class="invites-sample-content img-invite-hover">
-                        <div><a href=""><img src="img/invite/invite_jeremy.jpg" alt="Invité Jeremy"
+                        <div><a href="invite.html"><img src="img/invite/invite_jeremy.jpg" alt="Invité Jeremy"
                                              class="img-invite-hover"></a>
                             <div class="invites-sample-content-titles">
                                 <div>Jérémy Lavoie</div>
                                 <div>Designer Graphique</div>
                             </div>
                         </div>
-                        <div><a href=""><img src="img/invite/invite_robert.jpg" alt="Invité Robert"
+                        <div><a href="invite.html"><img src="img/invite/invite_robert.jpg" alt="Invité Robert"
                                              class="img-invite-hover"></a>
                             <div class="invites-sample-content-titles">
                                 <div>Robert Mercado</div>
                                 <div>Programmeur Back-End</div>
                             </div>
                         </div>
-                        <div><a href=""><img src="img/invite/invite_bobby.jpg" alt="Invité Bobby"
+                        <div><a href="invite.html"><img src="img/invite/invite_bobby.jpg" alt="Invité Bobby"
                                              class="img-invite-hover"></a>
                             <div class="invites-sample-content-titles">
                                 <div>Bobby Franks</div>
