--- a/invite.html
+++ b/invite.html
@@ -12,61 +12,58 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 
-    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/slick/slick.min.js"></script>
-    <script src="js/script.js"></script>
 </head>
 <body>
 
-    <nav class="nav-mobile">
-        <div class="wrapper">
-            <nav>
-                <div>
-                    <a href="index.html"><img src="img/logo/logo_white.svg" alt="Logo Convention Web de Montréal"
-                                              class="logo"></a>
-                </div>
-                <div>
-                    <a href="#" class="btn btn-white-border">Billeterie</a>
-                    <label for="show-menu-2" class="show-menu"><i class="fa fa-bars" aria-hidden="true"></i></label>
-                    <input type="checkbox" id="show-menu-2" class="toggle-menu">
-                </div>
-            </nav>
-            <div class="menu-mobile">
+<nav class="nav-mobile"  id="nav-mobile">
+    <div class="wrapper">
+        <nav>
+            <div>
+                <a href="index.html"><img src="img/logo/logo_white.svg" alt="Logo Convention Web de Montréal"
+                                          class="logo"></a>
+            </div>
+            <div>
+<!--                <a href="#" class="btn btn-white-border">Billeterie</a>-->
+                <label for="show-menu-2" class="show-menu"><i class="fa fa-bars" aria-hidden="true"></i></label>
+                <input type="checkbox" id="show-menu-2" class="toggle-menu">
+            </div>
+        </nav>
+        <div class="menu-mobile">
+            <div class="menu">
+                <ul>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="programmation.html">Programmation</a></li>
+                    <li><a href="#">Conférenciers</a></li>
+                    <li><a href="#">Informations</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<header>
+    <div class="wrapper">
+        <nav>
+            <div>
+                <a href="index.html"><img src="img/logo/logo.svg" alt="Logo Convention Web de Montréal"
+                                          class="logo"></a>
                 <div class="menu">
                     <ul>
-                        <li><a href="#">Accueil</a></li>
+                        <li><a href="index.html">Accueil</a></li>
                         <li><a href="programmation.html">Programmation</a></li>
                         <li><a href="#">Conférenciers</a></li>
                         <li><a href="#">Informations</a></li>
                     </ul>
                 </div>
             </div>
-        </div>
-    </nav>
-    
-    <header>
-        <div class="wrapper">
-            <nav>
-                <div>
-                    <a href="index.html"><img src="img/logo/logo.svg" alt="Logo Convention Web de Montréal"
-                                              class="logo"></a>
-                    <div class="menu">
-                        <ul>
-                            <li><a href="#">Accueil</a></li>
-                            <li><a href="programmation.html">Programmation</a></li>
-                            <li><a href="#">Conférenciers</a></li>
-                            <li><a href="#">Informations</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div>
-                    <a href="#" class="btn btn-green btn-billet">Billeterie</a>
-                    <label for="show-menu" class="show-menu"><i class="fa fa-bars" aria-hidden="true"></i></label>
-                    <input type="checkbox" id="show-menu" class="toggle-menu">
-                </div>
-            </nav>
-        </div>
-    </header>
+            <div>
+                <a href="#" class="btn btn-green btn-billet">Billeterie</a>
+                <label for="show-menu" class="show-menu"><i class="fa fa-bars" aria-hidden="true"></i></label>
+                <input type="checkbox" id="show-menu" class="toggle-menu">
+            </div>
+        </nav>
+    </div>
+</header>
 
 <section class="page">
     <article class="fiche">
@@ -91,21 +88,27 @@
                         </div>
                     </div>
                     <div>
-                        <p>Jérémy Lavoie est un designer graphique originaire de Montréal qui a travaillé sur de nombreux
+                        <p>Jérémy Lavoie est un designer graphique originaire de Montréal qui a travaillé sur de
+                            nombreux
                             sites et applications à son actif tel que Shifted et Soundered pour en nommer que quelques
                             uns.</p>
                         <div class="fiche-titre">Conférence</div>
                         <div>
                             <div class="fiche-event">
                                 <div>Le flat design: une tendance en évolution</div>
-                                <div>14 juillet 2018, 8:30 am - 10:15 am    |    Palais des congrès de Montréal, Local 517a</div>
+                                <div>14 juillet 2018, 8:30 am - 10:15 am | Palais des congrès de Montréal, Local 517a
+                                </div>
                                 <div><a href="">Trouver sur la carte</a></div>
                             </div>
-                            <p>En quelques années à peine, le flat design a complètement envahi l’intégralité des sites web
-                                et applications mobiles afin de devenir le style de choix des designers à travers le monde.
+                            <p>En quelques années à peine, le flat design a complètement envahi l’intégralité des sites
+                                web
+                                et applications mobiles afin de devenir le style de choix des designers à travers le
+                                monde.
                                 Originalement critiqué de causer les interfaces utilisateurs d’être contre-intuitif et
-                                difficile à utiliser, le flat design a su évoluer afin de devenir à la fois moins strict et
-                                plus attirant pour les utilisateurs. Dans cette conférence, Jérémy présentera l’évolution du
+                                difficile à utiliser, le flat design a su évoluer afin de devenir à la fois moins strict
+                                et
+                                plus attirant pour les utilisateurs. Dans cette conférence, Jérémy présentera
+                                l’évolution du
                                 flat design jusqu’à aujourd’hui.</p>
                         </div>
                     </div>
@@ -137,12 +140,12 @@
                     <a href=""><img src="img/invite/invite_gary.jpg" alt="Invité Gary" class="img-invite-hover"></a>
                 </div>
                 <div>
-                <a href=""><img src="img/invite/invite_allison.jpg" alt="Invité Allison" class="img-invite-hover"></a>
+                    <a href=""><img src="img/invite/invite_allison.jpg" alt="Invité Allison"
+                                    class="img-invite-hover"></a>
                 </div>
                 <div>
-                <a href=""><img src="img/invite/invite_liang.jpg" alt="Invité Liang" class="img-invite-hover"></a>
+                    <a href=""><img src="img/invite/invite_liang.jpg" alt="Invité Liang" class="img-invite-hover"></a>
                 </div>
-
 
 
             </div>
@@ -188,5 +191,6 @@
     </div>
 </footer>
 
+<script src="js/script.js"></script>
 </body>
 </html>
